--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body> 
     <div class="container">
         <div class="cabecera">
+            <img id="logo" src="images/dragon.png" alt="">
             HyperBlog
             <span id="tagline">Tu Blog de Maestro</span>
         </div>
